<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentAuth">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="590dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back_reg" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/auth_email"
            style="@style/editText"
            android:layout_marginTop="385dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/auth_email_et"
                android:layout_width="260dp"
                android:layout_height="55dp"
                android:backgroundTint="@color/milky"
                android:fontFamily="@font/sen_regular"
                android:text="@string/email"
                android:textColor="@color/grey" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/auth_password"
            style="@style/editText"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/auth_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/auth_password_et"
                android:layout_width="260dp"
                android:layout_height="55dp"
                android:backgroundTint="@color/milky"
                android:fontFamily="@font/sen_regular"
                android:inputType="textPassword"
                android:text="@string/password"
                android:textColor="@color/grey" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/remember_me_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sen_regular"
            android:textSize="14sp"
            android:text="@string/remember_me"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/auth_password"
            app:layout_constraintTop_toBottomOf="@id/auth_password" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/auth_login"
            style="@style/action_button"
            android:layout_marginTop="50dp"
            android:text="@string/login"
            app:layout_constraintTop_toBottomOf="@id/auth_password"
            app:layout_constraintStart_toStartOf="@id/auth_password"
            app:layout_constraintEnd_toEndOf="@id/auth_password"/>

        <TextView
            android:id="@+id/question"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textSize="12sp"
            android:fontFamily="@font/sen_regular"
            android:text="@string/question"
            android:textAlignment="center"
            android:textColor="#763900"
            app:layout_constraintEnd_toEndOf="@id/auth_login"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/auth_login"
            app:layout_constraintTop_toBottomOf="@id/auth_login" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/auth_signIn"
            android:layout_width="165dp"
            android:layout_height="55dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/sen_regular"
            android:text="@string/SignIn"
            android:textColor="@color/darker_brown"
            app:backgroundTint="@color/white"
            app:cornerRadius="10dp"
            app:strokeColor="#BF844810"
            app:strokeWidth="1dp"
            app:layout_constraintTop_toBottomOf="@id/question"
            app:layout_constraintStart_toStartOf="@id/question"
            app:layout_constraintEnd_toEndOf="@id/question"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/auth_signIn_google"
            style="@style/signIn_with_google"
            android:layout_marginTop="15dp"
            android:text="@string/google"
            app:icon="@drawable/search_lupa"
            app:iconSize="25dp"
            app:iconTintMode="multiply"
            app:layout_constraintEnd_toEndOf="@id/auth_signIn"
            app:layout_constraintStart_toStartOf="@id/auth_signIn"
            app:layout_constraintTop_toBottomOf="@id/auth_signIn" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>