<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.FragmentReg">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:fontFamily="@font/sen_regular"
        android:text="@string/welcome"
        android:textColor="@color/milky"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/sen_regular"
        android:text="@string/welcome1"
        android:textColor="@color/milky"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@id/welcome"
        app:layout_constraintEnd_toEndOf="@id/welcome"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_name"
        style="@style/editText"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reg_name_etext"
            android:layout_width="260dp"
            android:layout_height="55dp"
            android:backgroundTint="@color/milky"
            android:fontFamily="@font/sen_regular"
            android:inputType="text|textEmailAddress"
            android:text="@string/name"
            android:textColor="@color/grey" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_email"
        style="@style/editText"
        app:layout_constraintTop_toBottomOf="@id/reg_name"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reg_email_etext"
            android:layout_width="260dp"
            android:layout_height="55dp"
            android:backgroundTint="@color/milky"
            android:fontFamily="@font/sen_regular"
            android:inputType="text|textEmailAddress"
            android:text="@string/email"
            android:textColor="@color/grey" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_password"
        style="@style/editText"
        app:layout_constraintTop_toBottomOf="@id/reg_email"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reg_password_etext"
            android:layout_width="260dp"
            android:layout_height="55dp"
            android:backgroundTint="@color/milky"
            android:fontFamily="@font/sen_regular"
            android:inputType="textPassword"
            android:text="@string/password"
            android:textColor="@color/grey" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_password_repeat"
        style="@style/editText"
        app:layout_constraintTop_toBottomOf="@id/reg_password"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reg_password_repeat_etext"
            android:layout_width="260dp"
            android:layout_height="55dp"
            android:backgroundTint="@color/milky"
            android:fontFamily="@font/sen_regular"
            android:inputType="textPassword"
            android:text="@string/password"
            android:textColor="@color/grey" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/reg_signIn"
        style="@style/action_button"
        android:text="@string/SignIn"
        app:layout_constraintTop_toBottomOf="@id/reg_password_repeat"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textAlignment="center"
        android:textColor="@color/light_brown"
        android:fontFamily="@font/sen_regular"
        app:layout_constraintTop_toBottomOf="@+id/reg_signIn"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/reg_signIn"
        app:layout_constraintEnd_toEndOf="@+id/reg_signIn"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/reg_signIn_google"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        app:icon="@drawable/search_lupa"
        app:iconSize="25dp"
        app:iconTintMode="multiply"
        android:text="@string/google"
        android:textColor="@color/grey"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@id/or"
        app:layout_constraintStart_toStartOf="@id/or"
        app:layout_constraintTop_toBottomOf="@id/or" />
    </androidx.constraintlayout.widget.ConstraintLayout>